--- a/imports/ui/users/nosotros/nosotros.html
+++ b/imports/ui/users/nosotros/nosotros.html
@@ -1,7 +1,7 @@
 <template name="nosotros">
     <div style="background-color:#2d3e54;min-width:100wh;min-height:100vh">
         {{#if presentacionFoto}}
-            <img style="width:100wh" src="{{presentacionFoto}}" alt="{{presentacionFoto}}">
+            <img style="width:100%" src="{{presentacionFoto}}" alt="{{presentacionFoto}}">
         {{/if}}
         <div class="titulo" style="padding:25px">
             <span style=" font-family:'Montserrat';font-weight: 700;font-size: 24px;line-height:30px;font-style: normal; color:white;">
