fixed text style nosotros

--- a/imports/ui/users/nosotros/nosotros.html
+++ b/imports/ui/users/nosotros/nosotros.html
@@ -9,7 +9,7 @@
             </span>
         </div>
         <div class="presentacion" style="margin-left:65px;margin-right:65px">
-            <p style="text-align:right;font-family: 'Open Sans', sans-serif;color:white;font-size:26px">
+            <p style="text-align:left;font-family: 'Open Sans', sans-serif;color:white;font-size:26px">
                 {{presentacion}}
             </p>
         </div>
@@ -22,10 +22,10 @@
         {{#each personas}}
         <div class="persona" style="margin-left:65px;margin-right:65px">
             <div class="row">
-                <div class="col-md-offset-2 col-md-2"><img src="{{urlFoto}}" style="max-width:100px;border-radius: 100%"></div>
+                <div class="col-md-offset-2 col-md-2"><img src="{{urlFoto}}" style="max-width:150px;border-radius: 100%"></div>
                 <div class="col-md-8" style="min-height:200px">
-                    <h4 style="text-align:left;font-family: 'Open Sans', sans-serif;color:white;font-size:18px">{{nombre}}</h4>
-                    <p style="text-align:right;font-family: 'Open Sans', sans-serif;color:white;font-size:14px">{{texto}}</p>
+                    <h4 style="font-family:'Montserrat';font-weight: 700;font-size: 18px;line-height:30px;font-style: normal; color:white;">{{nombre}}</h4>
+                    <p style="text-align:left;font-family: 'Open Sans', sans-serif;color:white;font-size:14px">{{texto}}</p>
                 </div>
             </div>
         </div>
