--- a/imports/ui/users/nosotros/nosotros.html
+++ b/imports/ui/users/nosotros/nosotros.html
@@ -38,7 +38,7 @@
     <div data-3000="bottom:-100px" data-3100="bottom:0px" class="bottom-menu {{expandedMenuClass}}" style="z-index:1">
         <ul>
             <a href="/"><li class="horizontal-menu-item" data-value="home">HOME</li></a>
-            <li class="horizontal-menu-item" data-value="facebook">FACEBOOK</li>
+            <a href="https://www.facebook.com/groups/clubdelectura.uy/"><li class="horizontal-menu-item" data-value="facebook">FACEBOOK</li></a>
             <li class="horizontal-menu-item" data-value="libros">LIBROS LEIDOS</li>
             <li class="horizontal-menu-item" data-value="reseñas">RESEÑAS</li>
             <li class="horizontal-menu-item" data-value="colaboradores">COLABORADORES</li>
