--- a/imports/ui/users/nosotros/nosotros.html
+++ b/imports/ui/users/nosotros/nosotros.html
@@ -41,7 +41,7 @@
             <a href="https://www.facebook.com/groups/clubdelectura.uy/"><li class="horizontal-menu-item" data-value="facebook">FACEBOOK</li></a>
             <li class="horizontal-menu-item" data-value="libros">LIBROS LEIDOS</li>
             <li class="horizontal-menu-item" data-value="reseñas">RESEÑAS</li>
-            <li class="horizontal-menu-item" data-value="colaboradores">COLABORADORES</li>
+            <a href="/colaboradores"><li class="horizontal-menu-item" data-value="colaboradores">COLABORADORES</li></a>
             <!--<li class="horizontal-menu-item">ACTIVIDADES</li>-->
         </ul>
     </div>
