--- a/imports/ui/users/colaboradores/colaboradores.html
+++ b/imports/ui/users/colaboradores/colaboradores.html
@@ -14,9 +14,9 @@
                 <div class="persona" style="margin-left:65px;margin-right:65px">
                     <div class="row">
                     {{#each colaboradores}}
-                        <a href="{{url}}"><div class="col-md-4">
+                        <a href="{{url}}"><div class="col-md-4" style="margin-top:50px">
                             <div style="height:100px">
-                            <img src="{{urlFoto}}" style="width:100%;max-height:100px">
+                            <img src="{{urlFoto}}" style="width:100%;max-height:150px">
                             </div>
                             <!--<span style="font-family:'Montserrat';font-weight: 700;font-size: 18px;line-height:30px;font-style: normal; color:white;text-align: center"> {{nombre}}</span>-->
                         </div></a>
