added colaboradores to activities

--- a/imports/ui/users/colaboradores/colaboradores.html
+++ b/imports/ui/users/colaboradores/colaboradores.html
@@ -16,7 +16,7 @@
                     {{#each colaboradores}}
                         <a href="{{url}}"><div class="col-md-4" style="margin-top:50px">
                             <div style="height:100px">
-                            <img src="{{urlFoto}}" style="width:100%;max-height:150px">
+                            <img src="{{urlFoto}}" style="width:100%;max-height:150px;">
                             </div>
                             <!--<span style="font-family:'Montserrat';font-weight: 700;font-size: 18px;line-height:30px;font-style: normal; color:white;text-align: center"> {{nombre}}</span>-->
                         </div></a>
@@ -35,7 +35,6 @@
             <a href="https://www.facebook.com/groups/clubdelectura.uy/"><li class="horizontal-menu-item" data-value="facebook">FACEBOOK</li></a>
             <li class="horizontal-menu-item" data-value="libros">LIBROS LEIDOS</li>
             <li class="horizontal-menu-item" data-value="reseñas">RESEÑAS</li>
-
             <!--<li class="horizontal-menu-item">ACTIVIDADES</li>-->
         </ul>
     </div>
