--- a/imports/ui/admin/actividades/addActivityModal.html
+++ b/imports/ui/admin/actividades/addActivityModal.html
@@ -10,19 +10,6 @@
                 <div class="modal-body">
                     <div class="">
                         <div class="form-group">
-                            <label class="nombreActividad" >Caratula:</label>
-                            <!--<input type="file"  class="form-control-file" id="caratula">-->
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div id="dropzone" class="dropzone">
-                                        <div class="well well-drop-zone">
-                                            Drop file(s) here to upload
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group">
                             <label class="nombreActividad" >Nombre de actividad:</label>
                             <input class="form-control" id="nombreActividad" value="{{nombreActividad}}">
                         </div>
@@ -50,6 +37,37 @@
                         <div class="form-group">
                             <label class="textoActividad">Texto:</label>
                             <textarea type="text" class="form-control" id="textoActividad" rows="8" value="{{textoActividad}}"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label class="textoActividad">Colaboradores:</label>
+                            {{#if colaborador}}
+                            <div class="row">
+                            <div class="col-md-10">
+                                <select id="selectColaborador" class="form-control" >
+                                  {{#each colaborador}}
+                                        <option value="{{_id}}">{{nombre}}</option>
+                                  {{/each}}
+                                </select>
+                            </div>
+                            <div class="col-md-2">
+                                <span class="add-colaborador btn glyphicon glyphicon-plus" style="color:green" aria-hidden="true"></span>
+                            </div>
+
+                            </div>
+                            {{/if}}
+                            {{#if colaboradoresActividad}}
+                                <div>
+                                    <ul>
+                                      {{#each colaboradoresActividad}}
+                                           <li>{{nombre}} <span class="remove-colaborador btn glyphicon glyphicon-minus" style="color:red" aria-hidden="true"></span></li>
+                                      {{/each}}
+                                    </ul>
+                                </div>
+                            {{else}}
+                                <div class="alert alert-info">
+                                    No hay colaboradores agregados.
+                                </div>
+                            {{/if}}
                         </div>
                     </div>
                 </div>
