--- a/imports/ui/users/templatesImages/libroclub.html
+++ b/imports/ui/users/templatesImages/libroclub.html
@@ -8,22 +8,12 @@
         {{#if esPar}}
            <div style="background-image:url('libroclub.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100%"></div>
         {{else}}
-            <div style="width:100%;height:400px;padding-left:60px">
-                <div style="width:100%;">{{#if subtitulo}}<h3 class="actividad-subtitle">subtitulo</h3>{{/if}}<h1 class="actividad-nombre">{{nombre}}</h1></div>
-                <div style="margin-top:25px;max-height:165px;overflow-y:hidden"><h4><p class="actividad-descripcion">{{texto}}</p></h4></div>
-                <div style="height:50px;margin-top:60px;width:100%;text-align:center;color:white"><span class="btn btn-lg glyphicon glyphicon-file" aria-hidden="true"></span>
-                </div>
-            </div>
+            {{>textImpar}}
         {{/if}}
     </div>
     <div class="{{#if esPar}}col-md-5 par-right{{else}} impar-right col-md-7{{/if}}" >
     {{#if esPar}}
-        <div style="width:100%;height:400px;padding-right:60px">
-            <div style="width:100%;">{{#if subtitulo}}<h3 class="actividad-subtitle">subtitulo</h3>{{/if}}<h1 class="actividad-nombre">{{nombre}}</h1></div>
-            <div style="margin-top:25px;max-height:165px;overflow-y:hidden"><h4><p class="actividad-descripcion">{{texto}}</p></h4></div>
-            <div style="height:50px;margin-top:60px;width:100%;text-align:center;color:white"><span class="btn btn-lg glyphicon glyphicon-file" aria-hidden="true"></span>
-            </div>
-        </div>
+        {{>textPar}}
     {{else}}
         <div style="background-image:url('libroclub.png');background-size:contain;background-repeat:no-repeat;width:100%;height:100%"></div>
     {{/if}}
