--- a/imports/ui/admin/actividades/addActivityModal.html
+++ b/imports/ui/admin/actividades/addActivityModal.html
@@ -69,6 +69,31 @@
                                 </div>
                             {{/if}}
                         </div>
+                        <div class="form-group">
+                            <label class="textoActividad">Fotos:</label>
+                            <div class="upload-area">
+                                <form id="upload">
+                                    <p class="alert alert-success text-center">
+                                        <span>Clickear o Arrastrar acá para agregar foto</span>
+                                        <br>
+                                        <input class="actividad-foto" type="file">
+                                    </p>
+                                </form>
+                            </div>
+                            {{#if fotosActividad}}
+                                <div>
+                                    <ul>
+                                        {{#each fotosActividad}}
+                                            <li><a href="{{this}}">{{this}}</a> <span class="remove-foto btn glyphicon glyphicon-minus" style="color:red" aria-hidden="true"></span></li>
+                                        {{/each}}
+                                    </ul>
+                                </div>
+                            {{else}}
+                                <div class="alert alert-info">
+                                    No hay fotos agregadas.
+                                </div>
+                            {{/if}}
+                        </div>
                     </div>
                 </div>
 
