--- a/imports/ui/users/templatesImages/textActivity.html
+++ b/imports/ui/users/templatesImages/textActivity.html
@@ -1,30 +1,45 @@
 <template name="textImpar">
     <div style="width:100%;height:400px;padding-left:60px">
-        <div style="width:100%;">{{#if subtitulo}}<h3 class="actividad-subtitle">subtitulo</h3>{{/if}}<h1 class="actividad-nombre">{{nombre}}</h1></div>
-        <div style="margin-top:25px;max-height:165px;overflow-y:hidden"><h4><p class="actividad-descripcion">{{texto}}</p></h4></div>
-        {{>colaboradoresDisplay}}
-        <div style="height:50px;margin-top:60px;width:100%;text-align:center;color:white"><span class="btn btn-lg glyphicon glyphicon-file" aria-hidden="true"></span>
+        <div style="width:100%;">{{#if subtitulo}}<h3 class="actividad-subtitle">subtitulo</h3>{{/if}}<h1
+                class="actividad-nombre">{{nombre}}</h1></div>
+        <div style="margin-top:25px;max-height:165px;overflow-y:hidden">
+            <h4><p class="actividad-descripcion">{{texto}}</p></h4>
         </div>
+        {{>colaboradoresDisplay}}
+        {{#if tieneFoto}}
+            <div style="height:50px;margin-top:60px;width:100%;text-align:center;color:white"><span
+                    class="galeriaFotos btn btn-lg glyphicon glyphicon-file" aria-hidden="true"></span>
+            </div>
+        {{/if}}
+
     </div>
 </template>
 
 <template name="textPar">
     <div style="width:100%;height:400px;padding-right:60px">
-        <div style="width:100%;">{{#if subtitulo}}<h3 class="actividad-subtitle">subtitulo</h3>{{/if}}<h1 class="actividad-nombre">{{nombre}}</h1></div>
-        <div style="margin-top:25px;max-height:165px;overflow-y:hidden"><h4><p class="actividad-descripcion">{{texto}}</p></h4></div>
-        {{>colaboradoresDisplay}}
-        <div style="height:50px;margin-top:60px;width:100%;text-align:center;color:white"><span class="btn btn-lg glyphicon glyphicon-file" aria-hidden="true"></span>
+        <div style="width:100%;">{{#if subtitulo}}<h3 class="actividad-subtitle">subtitulo</h3>{{/if}}<h1
+                class="actividad-nombre">{{nombre}}</h1></div>
+        <div style="margin-top:25px;max-height:165px;overflow-y:hidden">
+            <h4><p class="actividad-descripcion">{{texto}}</p></h4>
         </div>
+        {{>colaboradoresDisplay}}
+        {{#if tieneFoto}}
+            <div style="height:50px;margin-top:60px;width:100%;text-align:center;color:white"><span
+                    class="galeriaFotos btn btn-lg glyphicon glyphicon-file" aria-hidden="true"></span>
+            </div>
+        {{/if}}
+
     </div>
 </template>
 
 <template name="colaboradoresDisplay">
     {{#if colaboradores}}
-            <div style="margin-top:10px;max-height:165px;overflow-y:hidden">
-                <span style="font-family:'Montserrat';font-weight: 700;font-size: 18px;line-height:30px;font-style: normal; color:white;">Colaboran: </span>
-                {{#each colaboradores}}
-                    <a href="{{url}}" style="margin-left:5px; font-family: 'Open Sans', sans-serif;color:white;">{{nombre}}</a>
-                {{/each}}
-            </div>
+        <div style="margin-top:10px;max-height:165px;overflow-y:hidden">
+            <span style="font-family:'Montserrat';font-weight: 700;font-size: 18px;line-height:30px;font-style: normal; color:white;">Colaboran: </span>
+            {{#each colaboradores}}
+                <a href="{{url}}"
+                   style="margin-left:5px; font-family: 'Open Sans', sans-serif;color:white;">{{nombre}}</a>
+            {{/each}}
+        </div>
     {{/if}}
 </template>
