added galeria de fotos

--- a/imports/ui/users/templatesImages/textActivity.html
+++ b/imports/ui/users/templatesImages/textActivity.html
@@ -2,6 +2,10 @@
     <div style="width:100%;height:400px;padding-left:60px">
         <div style="width:100%;">{{#if subtitulo}}<h3 class="actividad-subtitle">subtitulo</h3>{{/if}}<h1
                 class="actividad-nombre">{{nombre}}</h1></div>
+        <!--<div style="margin-top:10px;max-height:165px;overflow-y:hidden">-->
+            <!--<span style="font-family:'Montserrat';font-weight: 700;font-size: 18px;line-height:30px;font-style: normal; color:white;">Colaboran: </span>-->
+            <!---->
+        <!--</div>-->
         <div style="margin-top:25px;max-height:165px;overflow-y:hidden">
             <h4><p class="actividad-descripcion">{{texto}}</p></h4>
         </div>
