--- a/imports/ui/admin/modals/galeriaFotos.html
+++ b/imports/ui/admin/modals/galeriaFotos.html
@@ -1,6 +1,6 @@
 <template name="galeriaFotos">
     <div class="modal fade" >
-        <div class="modal-dialog" style="width:100%" >
+        <div class="modal-dialog" style="width:997px;height:558px" >
             <div class="modal-content" style="background-color:black">
                 <div class="modal-body" style="padding:0px">
                     <div id="myCarousel" class="carousel slide" data-ride="carousel">
