--- a/imports/ui/admin/navbar.html
+++ b/imports/ui/admin/navbar.html
@@ -19,7 +19,7 @@
                             <a href="/admin/actividades"><i class="fa fa-calendar fa margin-right-10" aria-hidden="true" ></i>Actividades</a>
                         </li>
                         <li>
-                            <a href="/admin/review"><i class="fa fa-book fa margin-right-10" aria-hidden="true" ></i>Reseñas</a>
+                            <a href="/admin/review"><i class="fa fa-bookmark fa margin-right-10" aria-hidden="true" ></i>Reseñas</a>
                         </li>
                         <li>
                             <a href="/admin/quienesSomos"><i class="fa fa-info fa margin-right-10" aria-hidden="true" ></i>Quienes somos</a>
@@ -29,6 +29,9 @@
                         </li>
                         <li>
                             <a href="/admin/contacto"><i class="fa fa-envelope fa margin-right-10" aria-hidden="true" ></i>Contacto</a>
+                        </li>
+                        <li>
+                            <a href="/admin/libros"><i class="fa fa-book fa margin-right-10" aria-hidden="true" ></i>Libros</a>
                         </li>
                         <!--<li>-->
                             <!--{{>loginButtons}}-->
