--- a/imports/ui/users/templatesImages/textActivity.html
+++ b/imports/ui/users/templatesImages/textActivity.html
@@ -8,8 +8,7 @@
         </div>
         {{>colaboradoresDisplay}}
         {{#if tieneFoto}}
-            <div style="height:50px;margin-top:60px;width:100%;text-align:center;color:white"><span
-                    class="galeriaFotos btn btn-lg glyphicon glyphicon-file" aria-hidden="true"></span>
+            <div style="height:50px;margin-top:60px;width:100%;text-align:center;color:white"><span class="galeriaFotos btn btn-lg" style="background-image:url('icono_galeria.png');background-size:contain;background-repeat:no-repeat;width:80px;height:80px" ></span>
             </div>
         {{/if}}
 
@@ -26,8 +25,7 @@
         </div>
         {{>colaboradoresDisplay}}
         {{#if tieneFoto}}
-            <div style="height:50px;margin-top:60px;width:100%;text-align:center;color:white"><span
-                    class="galeriaFotos btn btn-lg glyphicon glyphicon-file" aria-hidden="true"></span>
+            <div style="height:50px;margin-top:60px;width:100%;text-align:center;color:white"><span class="galeriaFotos btn btn-lg" style="background-image:url('icono_galeria.png');background-size:contain;background-repeat:no-repeat;width:80px;height:80px" ></span>
             </div>
         {{/if}}
 
