--- a/imports/ui/users/actividadItem.html
+++ b/imports/ui/users/actividadItem.html
@@ -5,16 +5,16 @@
         <!--{{> dragon}}-->
         {{#if isDesktop}}
         {{else}}
-        <div class="" style="width:100%;height:50vh;margin-top:30vh" >
-            <div style=" background-position:center top;
-    background-image:url('letras_lineadetiempo2.png');
-    background-repeat: no-repeat;background-size:contain;
-    width:100vw;height:50vh"></div>
-            <div style=" background-position:center top;
-    background-image:url('letras_lineadetiempo.png');
-    background-repeat: no-repeat;background-size:contain;
-    width:100vw;height:50vh;margin-top:-50vh"></div>
-        </div>
+        <!--<div class="" style="width:100%;height:50vh;margin-top:30vh" >-->
+            <!--<div style=" background-position:center top;-->
+    <!--background-image:url('letras_lineadetiempo2.png');-->
+    <!--background-repeat: no-repeat;background-size:contain;-->
+    <!--width:100vw;height:50vh"></div>-->
+            <!--<div style=" background-position:center top;-->
+    <!--background-image:url('letras_lineadetiempo.png');-->
+    <!--background-repeat: no-repeat;background-size:contain;-->
+    <!--width:100vw;height:50vh;margin-top:-50vh"></div>-->
+        <!--</div>-->
 {{/if}}
     </div>
 </template>
